# mac0431-ep4

./: relatorio.txt
src/: CMakeCache.txt  CMakeLists.txt  EP4  Makefile  cmake_install.cmake  kernel.cl  main.c  opcl.c  opcl.ptx  relatorio.txt  shift.cl
